--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,10 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+# Platformio
+cmake-build-debug/
+cmake-build-release/
+.pioenvs
+.piolibdeps
+CMakeListsPrivate.txt
+
